# atto-weather

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
icons/: icons.qrc
languages/: en.toml  es.toml
src/atto_weather/: __init__.py  __main__.py  _self.py  api.py  app.py  data_fields.py  i18n.py  icons_rc.py  main.py  store.py  text.py
src/atto_weather/api/: core.py  worker.py
src/atto_weather/components/: common.py  current.py  forecast.py  locations.py  panels.py
src/atto_weather/utils/: fields.py  settings.py  text.py
src/atto_weather/windows/: add_location.py  creds_required.py  settings.py  setup_wizard.py
